...
            </objects>
            <point key="canvasLocation" x="868" y="-1276"/>
        </scene>
        <!--Каталог-->
        <scene sceneID="sGw-PE-1su">
            <objects>
                <viewController modalPresentationStyle="fullScreen" id="q8v-pt-8xX" customClass="CatalogViewController" customModule="MyGeekBrainStore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5vI-ej-1s2">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="DGg-v8-Clt">
                                <rect key="frame" x="20" y="76" width="374" height="717"/>
...
            </objects>
            <point key="canvasLocation" x="151" y="-607"/>
        </scene>
        <!--Login View Controller-->
        <scene sceneID="3U2-WL-sMc">
            <objects>
                <viewController id="1uj-Lb-caZ" customClass="LoginViewController" customModule="MyGeekBrainStore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qAd-vA-CsM">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PiI-m0-dMe">
                                <rect key="frame" x="82" y="350.5" width="250" height="195"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" id="Qx6-Jd-nlv">
                        <imageReference key="image" image="person.fill" catalog="system" symbolScale="large" renderingMode="template"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="loginButton" destination="wL2-gK-rv4" id="33d-nz-Oqj"/>
                        <outlet property="loginTextField" destination="PZk-RD-kh9" id="XTF-tI-hVh"/>
                        <outlet property="passwordTextField" destination="1xe-kU-t9u" id="brW-vE-hHg"/>
                        <outlet property="registrationButton" destination="DN1-fA-RqZ" id="OYp-3g-oYB"/>
                        <segue destination="eDP-Q6-aio" kind="show" identifier="toUserView" id="h4X-my-ZW8"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dUX-eM-UR0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1875" y="-931"/>
        </scene>
        <!--Registration View Controller-->
        <scene sceneID="JO7-dR-JsD">
            <objects>
                <viewController id="vQG-My-REo" customClass="RegistrationViewController" customModule="MyGeekBrainStore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qqc-hO-T4i">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ded-6u-CWD">
                                <rect key="frame" x="0.0" y="54" width="414" height="798"/>
...
