...
                    }
                }
            }
        }
        else {
            reportExceptions.reportWithUserInfo(userId: User.shared.id)
            showAlert(text: "Заполните поля логин и пароль.")
        }
    }
    
    private func showAlert(text: String) {
        let alert = UIAlertController(title: "Ошибка входа", message: text, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ок", style: .default, handler: nil))
...
